trunk/Force4Facebook/src/objects/FacebookAppList__c.object
<CustomObject>
    <fields>
        <fullName>AppKey__c</fullName>
        <label>AppKey</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppSecret__c</fullName>
        <label>AppSecret</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>app_id__c</fullName>
        <label>app_id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>canvas_name__c</fullName>
        <label>canvas_name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>company_name__c</fullName>
        <label>company_name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>daily_active_users__c</fullName>
        <label>daily_active_users</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>display_name__c</fullName>
        <label>display_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>icon_url__c</fullName>
        <label>icon_url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>logo_url__c</fullName>
        <label>logo_url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>monthly_active_users__c</fullName>
        <label>monthly_active_users</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>weekly_active_users__c</fullName>
        <label>weekly_active_users</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FacebookAppList</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FacebookAppList Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FacebookAppLists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>